# Patcher-client

./: .gitignore  .travis.yml  LICENSE  README.md
Patcher/: CMakeLists.txt
Patcher/doc/: Doxyfile.in
Patcher/exemples/: CMakeLists.txt  Patcher-test  main.cpp
Patcher/include/Patcher/: Config.hpp  Log.hpp  MainWindow.hpp  Maj.hpp  Patcher.hpp  WebConnection.hpp  defines.hpp  defines.hpp.in
Patcher/include/patcher/: Config.hpp  Patcher.hpp  WebConnection.hpp
Patcher/src/Patcher/: CMakeLists.txt  Config.cpp  Log.cpp  MainWindow.cpp  Maj.cpp  Patcher.cpp  WebConnection.cpp  main.cpp
Patcher/src/patcher/: CMakeLists.txt  Config.cpp  Log.cpp  Maj.cpp  Patcher.cpp  Patcher_moc.cpp  WebConnection.cpp
