set(INCROOT ${PROJECT_SOURCE_DIR}/include/${CMAKE_PROJECT_NAME})
set(SRCROOT ${PROJECT_SOURCE_DIR}/src/${CMAKE_PROJECT_NAME})

configure_file(${INCROOT}/defines.hpp.in ${INCROOT}/defines.hpp @ONLY)
#ROOT files
set(ROOT_SRC
    ${SRCROOT}/Config.cpp
    ${SRCROOT}/Log.cpp
    ${SRCROOT}/Patcher.cpp
    ${SRCROOT}/Maj.cpp
    ${SRCROOT}/WebConnection.cpp
)
set(ROOT_HEADER
    ${INCROOT}/Config.hpp
    ${INCROOT}/defines.hpp
    ${INCROOT}/Log.hpp
    ${INCROOT}/Patcher.hpp
    ${INCROOT}/Maj.hpp
    ${INCROOT}/WebConnection.hpp
)
set(ROOT_FILES
    ${ROOT_HEADER}
    ${ROOT_SRC}
)

#FILES
set(FILES_HEADER
    ${ROOT_HEADER}
)
set(FILES_SRC
    ${ROOT_SRC}
)
#SHARED lib
add_library(${CMAKE_PROJECT_NAME} SHARED ${FILES_HEADER} ${FILES_SRC})
SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME}
    PROPERTIES
    VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}
    SOVERSION ${VERSION_MAJOR}.${VERSION_MINOR}
)
QT5_USE_MODULES(${CMAKE_PROJECT_NAME} Widgets Network Script)
target_link_libraries(${CMAKE_PROJECT_NAME} ${LIBS})
INSTALL(TARGETS ${CMAKE_PROJECT_NAME}
    DESTINATION lib
)

#static lib
#if(UNIX)
add_library(${CMAKE_PROJECT_NAME}-static STATIC ${FILES_HEADER} ${FILES_SRC})
SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME}-static
	PROPERTIES
	VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}
	SOVERSION ${VERSION_MAJOR}.${VERSION_MINOR}
)
QT5_USE_MODULES(${CMAKE_PROJECT_NAME}-static Widgets Network Script)
target_link_libraries(${CMAKE_PROJECT_NAME}-static ${LIBS})
INSTALL(TARGETS ${CMAKE_PROJECT_NAME}-static
	DESTINATION lib
)
